Edit more strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="action_settings">Settings</string>
     <string name="action_abtus">About us</string>
     <string name="action_welcome">Welcome!</string>
-    <string name="action_welcomesub">Find out what can we do!</string>
+    <string name="action_welcomesub">Find out what we can do!</string>
 </resources>
