--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="nav_header_title">You</string>
     <string name="nav_header_subtitle">guest@echelonteam.com</string>
     <string name="nav_header_desc">Navigation header</string>
+    <string name="nav_dashboard">Dashboard</string>
     <string name="action_settings">Settings</string>
     <string name="action_welcome">Welcome!</string>
     <string name="action_welcomesub">Find out what we can do!</string>
