--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,16 @@
     <string name="nav_header_title">You</string>
     <string name="nav_header_subtitle">guest@echelonteam.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="nav_dashboard">Dashboard</string>
     <string name="action_settings">Settings</string>
     <string name="action_welcome">Welcome!</string>
-    <string name="action_welcomesub">Find out what we can do!</string>
+    <string name="action_welcome_caption">Find out what we can do!</string>
+    <string name="info">Info</string>
+    <string name="members">Members</string>
+    <string name="projects">Projects</string>
+    <string name="custom_roms">Custom ROMs</string>
+    <string name="downloads">Downloads</string>
+    <string name="wallpapers">Wallpapers</string>
+    <string name="communicate">Communicate</string>
+    <string name="share">Share</string>
+    <string name="contacts">Contacts</string>
 </resources>
