Update text backgrounds - TMDR please learn how to use resources!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="reshitname">Reşit Menekşe | TGPResit</string>
     <string name="com_de_dev">Community manager, designer</string>
     <string name="reshit_desc">Saw weird stickers constantly? It\'s probably this guy. He can shitpost 24/7. We\'re trying to slow him down.</string>
+    <string name="developer">Developer who develops things</string>
 </resources>
