--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,6 @@
     <string name="nav_header_subtitle">guest@echelonteam.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="action_welcome">Welcome!</string>
-    <string name="action_welcome_caption">Find out what we can do!</string>
     <string name="info">Info</string>
     <string name="members">Members</string>
     <string name="projects">Projects</string>
@@ -25,7 +23,7 @@
     <string name="enes_desc">Everyone likes this guy. He somehow built every damn custom ROM available so his name can be everywhere.</string>
     <string name="peakname">Krittin Chuaiphikroh | peaktogoo</string>
     <string name="com_web_dev">Developer, community manager, website designer</string>
-    <string name="peak_desc">With such information, we don\'t know why is this guy still helping us. He\'s a good guy, but a bit annoying.</string>
+    <string name="peak_desc">With such information, we don\'t know why is this guy still helping us. He\'s a good guy, but very annoying.</string>
     <string name="nanoname">Rudy Naddour | TheMiniDev</string>
     <string name="app_dev">App developer, designer</string>
     <string name="nano_desc">Weirdly known by every member, his qualifying features is that he\'s goddamn fast. Really.</string>
